<resources>
    <string name="app_name">DesignInterface</string>
    <string name="description">Aladdin is a 2019 American musical fantasy drama film produced by Walt Disney Pictures. Directed by Guy Ritchie, from a script he co-wrote with John August, it is a live-action/CGI adaptation of Disneys1992 animated film of the same name, which itself is based on the eponymous tale from One Thousand and One Nights.[1][a] The film stars Will Smith, Mena Massoud, Naomi Scott, Marwan Kenzari,Navid Negahban, Nasim Pedrad, Billy Magnussen, and Numan Acar, as well as the</string>
    <string name="_7_2">7.2</string>
    <string name="aladdin_banner">aladdin_banner</string>
    <string name="aladdin_2019">Aladdin (2019)</string>
    <string name="family">Family</string>
    <string name="_242_ratings">242 ratings</string>
    <string name="similar">Similar</string>
    <string name="_71">71%</string>
    <string name="rent_from_4_99">Rent from $4.99</string>
    <string name="buy_from_9_99">Buy from $9.99</string>
    <string name="aladdin_image">aladdin_image</string>
    <string name="may_8_2019">May 8, 2019</string>
</resources>